fix: fix styling issues on mobile view

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -40,3 +40,9 @@ a,
     transition: background-color 0.3s ease-in-out;
   }
 }
+@media screen and (max-width: 1000px) {
+  #app {
+    margin: 0 auto;
+    padding: 0 1rem;
+  }
+}
